[package]
name = "rsacracker"
version = "0.8.0"
edition = "2021"
authors = ["skyf0l <skyf0lmails@proton.me>"]
description = "Powerful RSA cracker for CTFs. Supports RSA, X509, OPENSSH in PEM and DER formats."
repository = "https://github.com/skyf0l/RsaCracker"
license = "MIT OR Apache-2.0"
categories = ["cryptography", "mathematics"]
keywords = ["rsa", "cracker", "ctf", "crypto", "cryptography"]
include = [
  "/src/**/*",
  "/Cargo.toml",
  "/LICENSE*",
  "/README.md",
]
readme = "README.md"

[workspace]
members = [
  "tools/gen_keys",
]

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 2

[profile.release]
codegen-units = 1
lto = true

[dependencies]
